# rust-gc-be

./: .env.example  .gitignore  Cargo.toml  requests.txt
src/: errors.rs  main.rs
src/mapper/: product.rs
src/models/: category.rs  mod.rs  parent_category.rs  product.rs  product_categories.rs  product_image.rs  user.rs
src/modules/: mod.rs
src/modules/auth/: jwt_service.rs  mod.rs  routes.rs
src/modules/categories/: routes.rs
src/modules/product_images/: routes.rs
src/modules/products/: routes.rs
