[package]
name = "gc-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
bcrypt = "0.15.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio", "bigdecimal"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
